--- a/src/html/about.html
+++ b/src/html/about.html
@@ -224,7 +224,7 @@
     <div class="footer">
       <div class="footer_resize">
         <ul class="fmenu">
-          <li><a href="/src/index.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li class="active"><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contacts</a></li>
         </ul>
