--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -201,7 +201,7 @@
       <div class="footer">
         <div class="footer_resize">
           <ul class="fmenu">
-            <li><a href="/src/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li class="active"><a href="contact.html">Contacts</a></li>
           </ul>
