--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <div class="menu_nav">
             <ul>
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="/src/html/about.html">About Us</a></li>
-              <li><a href="/src/html/contact.html">Contact Us</a></li>
+              <li><a href="./src/html/about.html">About Us</a></li>
+              <li><a href="./src/html/contact.html">Contact Us</a></li>
             </ul>
           </div>
           <div class="clr"></div>
