--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="/src/css/styles.css" />
+    <link rel="stylesheet" href="src/css/styles.css" />
   </head>
   <body>
     <div class="main">
@@ -21,8 +21,8 @@
           <div class="menu_nav">
             <ul>
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="./src/html/about.html">About Us</a></li>
-              <li><a href="./src/html/contact.html">Contact Us</a></li>
+              <li><a href="src/html/about.html">About Us</a></li>
+              <li><a href="src/html/contact.html">Contact Us</a></li>
             </ul>
           </div>
           <div class="clr"></div>
