--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -120,7 +120,7 @@
             <h2>Image Gallery</h2>
             <a href="#"
               ><img
-                src="/src/images/pix1.jpg"
+                src="./src/images/pix1.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -128,7 +128,7 @@
             /></a>
             <a href="#"
               ><img
-                src="/src/images/pix2.jpg"
+                src="./src/images/pix2.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -136,7 +136,7 @@
             /></a>
             <a href="#"
               ><img
-                src="/src/images/pix3.jpg"
+                src="./src/images/pix3.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -144,7 +144,7 @@
             /></a>
             <a href="#"
               ><img
-                src="/src/images/pix4.jpg"
+                src="./src/images/pix4.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -152,7 +152,7 @@
             /></a>
             <a href="#"
               ><img
-                src="/src/images/pix5.jpg"
+                src="./src/images/pix5.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -160,7 +160,7 @@
             /></a>
             <a href="#"
               ><img
-                src="/src/images/pix6.jpg"
+                src="./src/images/pix6.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -170,7 +170,7 @@
           </div>
           <div class="col c2">
             <h2>About</h2>
-            <img src="/src/images/white.jpg" width="66" height="66" alt="" />
+            <img src="./src/images/white.jpg" width="66" height="66" alt="" />
             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
               libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci
