--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <p>
                 <big><strong>Lorem ipsum dolor</strong></big>
               </p>
-              <img src="/src/images/img1.jpg" width="287" height="97" alt="" />
+              <img src="./src/images/img1.jpg" width="287" height="97" alt="" />
               <p>
                 This is a free CSS website template by BlueWebTemplates. This
                 work is distributed under the
@@ -56,7 +56,7 @@
               <p>
                 <big><strong>Lorem ipsum dolor</strong></big>
               </p>
-              <img src="/src/images/img2.jpg" width="287" height="97" alt="" />
+              <img src="./src/images/img2.jpg" width="287" height="97" alt="" />
               <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
                 libero. Suspendisse bibendum. Cras id urna.
@@ -78,7 +78,7 @@
               <p>
                 <big><strong>Lorem ipsum dolor</strong></big>
               </p>
-              <img src="/src/images/img3.jpg" width="287" height="97" alt="" />
+              <img src="./src/images/img3.jpg" width="287" height="97" alt="" />
               <p>
                 <a href="#"
                   >Lorem Ipsum is not simply random text. It has roots in a
@@ -107,7 +107,7 @@
               <p>
                 <big><strong>Lorem ipsum dolor</strong></big>
               </p>
-              <img src="/src/images/img4.jpg" width="287" height="97" alt="" />
+              <img src="./src/images/img4.jpg" width="287" height="97" alt="" />
               <p>
                 This is a free CSS website template by BlueWebTemplates. This
                 work is distributed under the
