--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -3,7 +3,7 @@
   <head>
     <title>Business Box | Contact</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="/src/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="../css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="main">
@@ -19,9 +19,9 @@
           </div>
           <div class="menu_nav">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li class="active"><a href="contact.html">Contact Us</a></li>
+              <li><a href="../../index.html">Home</a></li>
+              <li><a href="./about.html">About Us</a></li>
+              <li class="active"><a href="./contact.html">Contact Us</a></li>
             </ul>
           </div>
           <div class="clr"></div>
@@ -120,7 +120,7 @@
             <h2>Image Gallery</h2>
             <a href="#"
               ><img
-                src="./src/images/pix1.jpg"
+                src="../images/pix1.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -128,7 +128,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix2.jpg"
+                src="../images/pix2.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -136,7 +136,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix3.jpg"
+                src="../images/pix3.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -144,7 +144,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix4.jpg"
+                src="../images/pix4.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -152,7 +152,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix5.jpg"
+                src="../images/pix5.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -160,7 +160,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix6.jpg"
+                src="../images/pix6.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -170,7 +170,7 @@
           </div>
           <div class="col c2">
             <h2>About</h2>
-            <img src="./src/images/white.jpg" width="66" height="66" alt="" />
+            <img src="../images/white.jpg" width="66" height="66" alt="" />
             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
               libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci
@@ -201,9 +201,9 @@
       <div class="footer">
         <div class="footer_resize">
           <ul class="fmenu">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="./about.html">About Us</a></li>
+            <li class="active"><a href="./contact.html">Contacts</a></li>
           </ul>
           <p class="lf">
             &copy; Copyright MyWebSite. Designed by Blue
