--- a/src/html/about.html
+++ b/src/html/about.html
@@ -21,9 +21,9 @@
           </div>
           <div class="menu_nav">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li class="active"><a href="about.html">About Us</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="../../index.html">Home</a></li>
+              <li class="active"><a href="./about.html">About Us</a></li>
+              <li><a href="./contact.html">Contact Us</a></li>
             </ul>
           </div>
           <div class="clr"></div>
@@ -143,7 +143,7 @@
             <h2>Image Gallery</h2>
             <a href="#"
               ><img
-                src="./src/images/pix1.jpg"
+                src="../images/pix1.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -151,7 +151,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix2.jpg"
+                src="../images/pix2.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -159,7 +159,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix3.jpg"
+                src="../images/pix3.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -167,7 +167,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix4.jpg"
+                src="../images/pix4.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -175,7 +175,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix5.jpg"
+                src="../images/pix5.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -183,7 +183,7 @@
             /></a>
             <a href="#"
               ><img
-                src="./src/images/pix6.jpg"
+                src="../images/pix6.jpg"
                 width="66"
                 height="66"
                 alt=""
@@ -193,7 +193,7 @@
           </div>
           <div class="col c2">
             <h2>About</h2>
-            <img src="./src/images/white.jpg" width="66" height="66" alt="" />
+            <img src="../images/white.jpg" width="66" height="66" alt="" />
             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
               libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci
