--- a/src/html/about.html
+++ b/src/html/about.html
@@ -230,7 +230,7 @@
           </ul>
           <p class="lf">
             &copy; Copyright MyWebSite. Designed by Blue
-            <a href="http://www.bluewebtemplates.com/">Website Templates</a>
+            <a href="#">Website Templates</a>
           </p>
           <div class="clr"></div>
         </div>
