--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -207,7 +207,7 @@
           </ul>
           <p class="lf">
             &copy; Copyright MyWebSite. Designed by Blue
-            <a href="http://www.bluewebtemplates.com/">Website Templates</a>
+            <a href="#">Website Templates</a>
           </p>
           <div class="clr"></div>
         </div>
